--- a/styles.css
+++ b/styles.css
@@ -140,18 +140,23 @@ button {
   border: 2px solid #9dffad;
   cursor: pointer;
 }
-
-#histories {
+/* #histories {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+} */
+#histories {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 15px;
 }
-
 .card {
+  text-align: center;
   width: 100%;
   height: 100%;
   padding: 50px;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
@@ -186,7 +191,10 @@ button {
     padding: 0 20px;
     width: 100%;
   }
-  .card {
+  /* .card {
     flex-direction: column;
+  } */
+  #histories {
+    grid-template-columns: 1fr;
   }
 }
